# ROOTvsEigen3

./: .gitignore  CMakeLists.txt
python/: benchmarks.txt  visualization.ipynb
src/: main.cc
